tests/ui/union/union-generic.stderr
error[E0277]: the trait bound `Rc<u32>: Copy` is not satisfied
  --> $DIR/union-generic.rs:8:13
   |
LL |     let u = U { a: Rc::new(0u32) };
   |             ^ the trait `Copy` is not implemented for `Rc<u32>`
   |
help: item with same name found
  --> $SRC_DIR/alloc/src/rc.rs:LL:COL
   = note: perhaps two different versions of crate `alloc` are being used?
note: required by a bound in `U`
  --> $DIR/union-generic.rs:3:12
   |
LL | union U<T: Copy> {
   |            ^^^^ required by this bound in `U`

error[E0277]: the trait bound `Rc<u32>: Copy` is not satisfied
  --> $DIR/union-generic.rs:10:17
   |
LL |     let u = U::<Rc<u32>> { a: Default::default() };
   |                 ^^^^^^^ the trait `Copy` is not implemented for `Rc<u32>`
   |
help: item with same name found
  --> $SRC_DIR/alloc/src/rc.rs:LL:COL
   = note: perhaps two different versions of crate `alloc` are being used?
note: required by a bound in `U`
  --> $DIR/union-generic.rs:3:12
   |
LL | union U<T: Copy> {
   |            ^^^^ required by this bound in `U`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
